Fixed some layout issues with contact forms

--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ th, .container-title
 }
 .form-content-contact {
   background: white;
-  height: 50%;
+  height: 80%;
   width: 30%;
   z-index: 2;
   position: absolute;
